2008-08-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9041: Uninitialized array in class.browse_links.php

2008-08-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #9196: In htmlArea RTE, unable to create an external URL containing german umlauts

2008-08-21  Dmitry Dulepov  <dmitry@typo3.org>

    * Fixed bug #8826: calls to ini_set produces warnings

2008-08-20  Dmitry Dulepov  <dmitry@typo3.org>

    * Fixed bug #5205: pi_loadLL() + no language file == full path disclosure

2008-08-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9197: Misbehaviour of DAM media tab in htmlArea RTE link insertion dialogue

2008-08-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9109: Enable altMountPoints feature in RTE element browser (Thanks to Steffen Kamper)

2008-08-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9141: Update Wizard uses wrong scheme to write compat_version to localconf.php
	* Fixed bug #9152: Deprecated code into stdgraphic

2008-08-15  Benjamin Mack <benni@typo3.org>

	* Fixed bug #6574: Template nextlevel with size=3 & allowed = 1 (Thanks to Georg Ringer)

2008-08-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8988: htmlArea RTE: Pasting text from MS Word to Firefox 3 brings a lot of garbage

2008-08-11  Benjamin Mack  <benni@typo3.org>

	* Fixed #8259: Cleanup: Call to t3lib_div::devLog() without key (Thanks to Francois Suter)

2008-08-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8996: htmlArea RTE: link to file not updated when changing case in file name
	* Added feature #9157: htmlArea RTE EM setting for DAM becomes deprecated with DAM 1.1+
	* Follow-up on feature #9157: htmlArea RTE EM setting for DAM - correcting test on DAM version
	* Updated htmlArea RTE version to 1.7.6 for TYPO3 4.2.2

2008-08-11  Ingo Renner  <ingo@typo3.org>

	* Reverted Change from 2008-08-06 in t3lib_div leading to nonfunctional clipboard

2008-08-07  Oliver Hader  <oliver@typo3.org>
